@@ -1044,6 +1044,7 @@ Do not forget to change your [[Special:Preferences|{{SITENAME}} preferences]].',
 'login'                      => 'Log in',
 'nav-login-createaccount'    => 'Log in / create account',
 'loginprompt'                => 'You must have cookies enabled to log in to {{SITENAME}}.',
+'userloginnocreate'          => 'Log in',
 'userlogin'                  => 'Log in / create account',
 'logout'                     => 'Log out',
 'userlogout'                 => 'Log out',
